fix: Increase contrast of main menu
- Make links the same color as other text
- Adds a right border
- Bolds the active page

--- a/resources/skins.ubuntu.styles/components/Dropdown.less
+++ b/resources/skins.ubuntu.styles/components/Dropdown.less
@@ -57,7 +57,7 @@
 }
 
 .vector-pinnable-element .vector-menu-heading {
-	color: @color-subtle;
+	color: @color-base;
 	font-weight: normal;
 	cursor: default;
 	padding: @padding-vertical-dropdown-menu-item 0;
